[gd_scene load_steps=3 format=3 uid="uid://dvvoyxs6gfhne"]

[ext_resource type="Script" path="res://components/collisions/hitbox_2d.gd" id="1_objhs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4vuiw"]
size = Vector2(18, 39)

[node name="Hitbox2D" type="Area2D" groups=["attack"]]
script = ExtResource("1_objhs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -5.5)
shape = SubResource("RectangleShape2D_4vuiw")

[node name="DisableHitBoxTimer" type="Timer" parent="."]

[connection signal="timeout" from="DisableHitBoxTimer" to="." method="_on_disable_hit_box_timer_timeout"]
